fix: add missing row-gap property

--- a/src/components/BurgerIngredients/burger-ingredients.module.css
+++ b/src/components/BurgerIngredients/burger-ingredients.module.css
@@ -47,6 +47,7 @@
   grid-template-columns: repeat(2, 1fr);
   grid-auto-flow: row;
   column-gap: 24px;
+  row-gap: 32px;
 }
 
 /* rules for list-item block */
